EJS - added styling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,18 @@
                 <span class="article_date">Date</span>
             </a>
         </li>
+        <li>
+            <a href="#">
+                <span>Post Title</span>
+                <span class="article_date">Date</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span>Post Title</span>
+                <span class="article_date">Date</span>
+            </a>
+        </li>
     </ul>
     <a href="#" class="pagination">&lt; View Posts from before</a>
 </section>
