--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,241 @@
-body{
-    background-color: aqua;
+
+:root{
+    --black:#1c1c1c;
+    --gray:#7E7E7E;
+    --gray-light:#E4E4E4;
+    --red: #b30000;
+    --font-size-base: 1rem;
+    --font-size-md:clamp(1.25rem,0.61vw + 1.1rem, 1.58rem);
+    --font-size-lg:clamp(1.56rem,1vw + 1.31rem, 2.11rem);
+    --font-size-xl:clamp(2.44rem,2.38vw + 1.85rem, 3.75rem);
+    --boredr-radius: 10px;
 }
+
+body{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: var(--black);
+    font-size: var(--font-size-base);
+    background-color: #FAF5EE;
+    margin: 0;
+}
+
+a{color: var(--black);}
+
+h1{font-size: var(--font-size-xl);}
+
+h2{font-size: var(--font-size-lg);}
+
+h3{font-size: var(--font-size-md);}
+
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="search"],
+select,
+textarea{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: var(--font-size-base);
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 0.7rem 0.75rem;
+    margin-bottom: 1rem;
+}
+
+.btn{
+    background-color: var(--black);
+    border: none;
+    color: white;
+    padding: 2rem 4rem;
+    text-decoration: none;
+    margin: 1rem 0.5rem;
+    cursor: pointer;
+}
+
+.btn-delete{
+    padding: 1rem 0.5rem; 
+    background-color: var(--red);
+}
+
+img{
+    width: 100%;
+    height: auto;
+}
+
+.container{
+    max-width: 982px;
+    margin: 0 auto;
+    padding: 0rem 2rem;
+}
+
+.main{padding: 2rem 0rem;}
+
+.hero-image{
+    max-height: 528px;
+    filter: drop-shadow(0px 44px 34px rgba(0,0,0,0.25));
+    overflow: hidden;
+    border-radius: var(--boredr-radius);
+}
+
+.header{
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    padding-top: 0.5rem;
+    grid-template-areas: 
+    "logo button"
+    "menu menu"
+    ;
+}
+
+@media only screen and (min-width: 768px){
+    .header{
+        grid-template-columns: auto 1fr auto;
+        grid-template-areas: "logo menu button";
+    }
+}
+
+.header_logo{
+    grid-area: logo;
+    font-weight: 800;
+    font-size: 2.5rem;
+    text-decoration: none;
+}
+
+.header_logo:hover{
+    text-decoration: underline;
+}
+
+.header_nav{
+    grid-area: menu;
+    display: flex;
+    justify-content: center;
+}
+.header_button{
+    grid-area: button;
+    display: flex;
+    justify-content: end;  
+}
+
+.header_button button{
+    display: flex;
+    gap: 0.3rem;
+    align-items: center;
+    border: 0;
+    padding: 0.5rem 1rem;
+    background: none;
+    border-radius: var(--boredr-radius);
+    border: 2px solid transparent;
+    font-size: var(--font-size-base);
+    font-weight: 600;
+    color: var(--black);
+}
+
+.header_button button:hover{
+    border: 2px solid var(--black);
+}
+.header_nav ul{
+    list-style-type: none;
+    display: flex;
+    gap: 1rem;
+    font-weight: 600;
+    padding: 0;
+}
+
+.header_nav ul a{
+    padding: 1rem;
+    text-decoration: none;
+}
+
+.header_nav ul a:hover{text-decoration: underline;   }
+
+.header_nav ul a.active{color: var(--gray);}
+
+.author{
+    padding: 1rem 0rem;
+    text-align: center;
+}
+
+.author_heading{
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
+
+.author_body{
+    font-size: var(--font-size-md);
+    margin: 1rem 0rem 5rem;
+}
+
+.article_heading{
+    margin-top: 4rem;
+    font-weight: 400;
+}
+
+.article_ul{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    font-size: clamp(1.13rem, cal(1.08rem + 0.22vw), 1.25rem);
+    display: flex;
+    flex-direction: column;
+}
+
+.article_date{
+    font-size: var(--font-size-base);
+    color: var(--gray);
+    width: 260px;
+    display: inline-block;
+}
+
+.article_ul li a {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-decoration: none;
+    margin: 18px 0;
+  }
+  
+  @media only screen and (min-width: 768px) {
+    .article_ul li a {
+      flex-direction: row;
+      align-items: center;
+    }
+  
+    .article_date {
+      text-align: right;
+    }
+  }
+  
+  .article_ul li {
+    font-size: 24px;
+    cursor: pointer;
+    transition: filter 0.1s;
+  }
+  
+  .article_ul li:not(:last-child) {
+    border-bottom: 1px solid var(--gray-light);
+  }
+  
+  .article_ul li:hover {
+    filter: none;
+  }
+  
+  .article_ul:hover li {
+    filter: blur(3px);
+  }
+  
+  .article_ul:hover li:hover {
+    filter: none;
+  }
+  
+  
+  .article {
+    white-space: pre-wrap;
+  }
+  
+  
+  .footer {
+    margin: 4rem;
+    text-align: center;
+  }
