--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,24 +8,17 @@
 <section class="articles">
     <h2 class="articles_heading">Latest Posts</h2>
     <ul class="article_ul">
-        <li>
-            <a href="#">
-                <span>Post Title</span>
-                <span class="article_date">Date</span>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <span>Post Title</span>
-                <span class="article_date">Date</span>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <span>Post Title</span>
-                <span class="article_date">Date</span>
-            </a>
-        </li>
+        <% posts.forEach(post => { %>
+            <li>
+                <a href="/post/<%= post._id %>">
+                    <span><%= post.title %></span>
+                    <span class="article_date"><%= post.createdAt.toDateString() %></span>
+                </a>
+            </li>
+        <% }) %>
     </ul>
-    <a href="#" class="pagination">&lt; View Posts from before</a>
+    <% if (nextPage !== null) { %>
+        <a href="/?page=<%= nextPage %>" class="pagination">&lt; View Posts from before</a>
+    <% } %>
+
 </section>
